WIM-1226 - Changed body bg color to fix contrast issue with footer links and headings.

--- a/themes/wim/components/wim/atoms/_breadcrumb.scss
+++ b/themes/wim/components/wim/atoms/_breadcrumb.scss
@@ -1,7 +1,7 @@
 .breadcrumb {
   background: white;
   margin: -15px 0 0;
-  color: $gray-light;
+  color: #666;
 
   .active {
     color: $gray-dark;
