--- a/themes/wim/components/wim/base/_variables.scss
+++ b/themes/wim/components/wim/base/_variables.scss
@@ -1,4 +1,4 @@
-$body-bg:               #d0d0d0 ;
+$body-bg:               #F0F0F0;
 
 $font-family-sans-serif:    "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif ;
 $font-family-serif:         "Roboto Slab", Georgia, "Times New Roman", Times, serif ;
